--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">RandomImageRenderers</string>
+    <string name="check_internet">Please check your internet connectivity and try again</string>
+    <string name="retry">Retry</string>
+    <string name="no_connection">No Connection</string>
 </resources>
